--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ buildscript {
     ext.kotlin_version = "1.4.20"
     ext.hilt_version = "2.28.1-alpha"
     ext.hilt_extensions_version = "1.0.0-alpha02"
-    ext.nav_version = "2.3.0"
+    ext.nav_version = "2.3.2"
     ext.recycler_view_version = "1.1.0"
-
+    ext.lifecycle_extensions_version = "2.2.0"
+    ext.roomVersion = '2.3.0-alpha04'
+    ext.coroutine_version = "1.3.7"
 
     repositories {
         google()
